# content_automation

./: .env.example  .gitignore  Makefile  README.md  checklist.schema.json  observation1.md  pyproject.toml  requirements.txt  reviewer-agent.prompt.md
.claude/skills/viral-shorts-strategy/: SKILL.md
config/: controls.yaml  feeds.yaml  learnings.md  pricing.yaml  settings.yaml  storyboard.schema.json  style_guide.md
docs/: usage-dashboard-spec.md
pipeline/: analyst.py  analytics.py  autopilot.py  checkpoints.py  director.py  editor.py  entities.py  evalharness.py  hooksmith.py  imagegen.py  music.py  packager.py  plan.py  publisher.py  queue.py  reviewer.py  run.py  scout.py  screencap.py  scriptwriter.py  shots.py  social.py  storyboard_adapter.py  strategist.py  usage.py  util.py  videogen.py  virality.py  visuals.py  voice.py  writer.py
pipeline/ui/: server.py
pipeline/ui/static/: app.js  fonts.css  index.html  style.css
