[project]
name = "content-automation"
version = "0.1.0"
description = "Automated shorts/reels factory: RSS -> script -> voice -> b-roll -> captions -> review"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "feedparser>=6.0",
    "requests>=2.32",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "faster-whisper>=1.1",
]
